@@ -54,6 +54,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{577, 68}, {943, 1100}}</string>
+	<string>{{577, 74}, {1124, 1094}}</string>
 </dict>
 </plist>
