@@ -1,5 +1,9 @@
 2007-06-15  Satoshi Nakagawa <artension@gmail.com>
 
+	Changed colors of DCC file receiving items.
+
+2007-06-15  Satoshi Nakagawa <artension@gmail.com>
+
 	Added DCC file receiving.
 	Added DCC dialog size management.
 
